@@ -10,6 +10,11 @@ ubiquity (2.9.11) UNRELEASED; urgency=low
   * gtk_ui.py: Update rendering of GtkComboBox following light-themes update
     (was dark text on dark background, now light text on dark background)
 
+  [ Martin Pitt ]
+  * gtk_ui.py: In only-ubiquity mode, call apport-gtk frontend ourselves after
+    a crash, as there is no update-notifier running to pick it up.
+    (LP: #712677)
+
  -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 23 Jan 2012 17:42:59 -0500
 
 ubiquity (2.9.10) precise; urgency=low
